# ExpenseMate

./: .gitignore  README.md
backend/: .env  Makefile  api.http  manage.py  pyproject.toml  requirements.txt
backend/authentication/: serializers.py  urls.py  views.py
backend/currencies/: models.py
backend/currencies/migrations/: 0001_initial.py
backend/em_backend/: settings.py  wsgi.py
backend/investments/: models.py
backend/investments/migrations/: 0001_initial.py  0002_initial.py
backend/root/: settings.py  urls.py
backend/transactions/: admin.py  models.py  serializers.py  urls.py  views.py
backend/transactions/migrations/: 0001_initial.py  0002_initial.py  0002_rename_user_id_expense_user_and_more.py  0002_transaction_category.py
backend/user_auth/: admin.py  models.py  urls.py  views.py
backend/user_auth/migrations/: 0001_initial.py  0002_alter_customuseraddress_second_line_and_more.py  0003_rename_id_customuserdetails_user.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
backend/versioning/: AcceptHeaderVersioning.py
django_backend/em_backend/: asgi.py
em_backend/: urls.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.ts
frontend/src/components/: CtaSection.vue  DashboardSection.vue  ExpenseWidget.vue  FeaturesSection.vue  FooterSection.vue  GeneralBudgetWidget.vue  HeroSection.vue  HomeHeading.vue  IncomeWidget.vue  InvestmentsWidget.vue  (+8 more)
vue_frontend/: README.md  package-lock.json  package.json  tailwind.config.js
(+24 files in other folders)
