[project]
name = "em-backend"
version = "0.1.0"
description = "Backend dependencies for Expense Mate project"
authors = [
    {name = "MarcinZ20",email = "marcin_zub@outlook.com"}
]
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.1,<3.0.0)",
    "django (>=5.1.5,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "django-filter (>=24.3,<25.0)",
    "django-seed (>=0.3.1,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
